--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB simu_src "*.cpp")
 find_package(Eigen3 CONFIG REQUIRED)
-add_library(simu_lib ${simu_src})
+add_library(simu_lib ${simu_src} Forward.cpp Forward.h Date.cpp Date.h)
 target_link_libraries(simu_lib PRIVATE Eigen3::Eigen)
 target_include_directories(simu_lib PUBLIC .)
