remove incomplete files and format new files to fit in existing code

--- a/examples/EuropeanOption/CMakeLists.txt
+++ b/examples/EuropeanOption/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(european_option EuropeanOption.cpp ../../src/Forward.cpp ../../src/Forward.h ../../src/Date.cpp ../../src/Date.h)
+add_executable(european_option EuropeanOption.cpp)
 target_link_libraries(european_option PRIVATE simu_lib)
