--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,8 @@ set(CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++20")
 
 project (Simulation-cpp)
+
+find_package(Eigen3 CONFIG REQUIRED)
+
 add_subdirectory(src)
 add_subdirectory(examples)
